Fix horizontal scroll overflow globally

--- a/src/index.css
+++ b/src/index.css
@@ -85,6 +85,8 @@ body {
 #root {
   height: 100%;
   display: flex;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 /* Hide scrollbar but keep scroll functionality */
@@ -124,10 +126,14 @@ textarea {
 /* Disable selection highlight on touch devices */
 * {
   -webkit-touch-callout: none;
-  -webkit-user-select: none; /* Safari */
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* IE10+/Edge */
-  user-select: none; /* Standard */
+  -webkit-user-select: none;
+  /* Safari */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* IE10+/Edge */
+  user-select: none;
+  /* Standard */
 }
 
 /* Allow text selection in inputs */
